popovers on mobile devices fixed

--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -12,7 +12,7 @@
 h1, h5 {
     z-index:1000;
     font-weight: 900;
-    font-size: 2.3rem;
+    font-size: 5rem;
     text-align: center;
 }
 .carousel {
@@ -33,7 +33,7 @@ h1, h5 {
     width: 100%;
 }
 .carousel-caption h4 {
-    background-color:rgba(25, 25,25, 0.2);
+    background-color:rgba(25, 25,25, 0.4);
     z-index: 1000;   
 }
 #welcome {
@@ -44,12 +44,11 @@ h1, h5 {
     width: 100%;
     height: 100%;
     background-image: url('../../assets/home.jpg');
-    background-color:rgba(0, 0, 0, 0.6);
+    background-color:rgba(0, 0, 0, 0.2);
     background-repeat: no-repeat;
     background-size: cover;
     /* background-blend-mode: difference; */
     padding: 300px 0 300px 0;
-    
     color: whitesmoke;
     background-blend-mode:overlay;
 }
